`Update meta tags, remove StarBorder component, and modify Navigation and ProjectCard components`

--- a/index.html
+++ b/index.html
@@ -4,7 +4,38 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Joshua Onyeka's Portfolio - Software Developer</title>
+    <meta name="title" content="Joshua's Portfolio - Web Developer & Designer" />
+    <meta
+      name="description"
+      content="Explore Joshua's portfolio showcasing web development projects, creative designs, and professional experience in building modern web applications."
+    />
+    <meta name="keywords" content="web developer, portfolio, frontend developer, React developer, web designer, Joshua portfolio" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="author" content="Joshua" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jooshfolio.vercel.app" />
+    <meta property="og:title" content="Joshua's Portfolio - Web Developer & Designer" />
+    <meta
+      property="og:description"
+      content="Explore Joshua's portfolio showcasing web development projects, creative designs, and professional experience in building modern web applications."
+    />
+    <meta property="og:image" content="https://jooshfolio.vercel.app/favicon.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://jooshfolio.vercel.app" />
+    <meta property="twitter:title" content="Joshua's Portfolio - Web Developer & Designer" />
+    <meta
+      property="twitter:description"
+      content="Explore Joshua's portfolio showcasing web development projects, creative designs, and professional experience in building modern web applications."
+    />
+    <meta property="twitter:image" content="https://jooshfolio.vercel.app/favicon.png" />
   </head>
   <body>
     <div id="root"></div>
