`Update title and description metadata in index.html`

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
     <!-- Primary Meta Tags -->
     <title>Joshua Onyeka's Portfolio - Software Developer</title>
-    <meta name="title" content="Joshua's Portfolio - Web Developer & Designer" />
+    <meta name="title" content="Joshua's Portfolio - Software Developer & Designer" />
     <meta
       name="description"
       content="Explore Joshua's portfolio showcasing web development projects, creative designs, and professional experience in building modern web applications."
     />
-    <meta name="keywords" content="web developer, portfolio, frontend developer, React developer, web designer, Joshua portfolio" />
+    <meta name="keywords" content="Software developer, portfolio, frontend developer, React developer, web designer, Joshua portfolio" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
     <meta name="author" content="Joshua" />
@@ -20,7 +20,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://jooshfolio.vercel.app" />
-    <meta property="og:title" content="Joshua's Portfolio - Web Developer & Designer" />
+    <meta property="og:title" content="Joshua's Portfolio - Software Developer & Designer" />
     <meta
       property="og:description"
       content="Explore Joshua's portfolio showcasing web development projects, creative designs, and professional experience in building modern web applications."
@@ -30,7 +30,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://jooshfolio.vercel.app" />
-    <meta property="twitter:title" content="Joshua's Portfolio - Web Developer & Designer" />
+    <meta property="twitter:title" content="Joshua's Portfolio - Software Developer & Designer" />
     <meta
       property="twitter:description"
       content="Explore Joshua's portfolio showcasing web development projects, creative designs, and professional experience in building modern web applications."
